force-app/main/default/objects/User/fields/Personalized_Website__c.field-meta.xml
<CustomField>
    <fullName>Personalized_Website__c</fullName>
    <label>Personalized Website</label>
    <length>100</length>
    <type>Text</type>
</CustomField>