force-app/main/default/objects/User/fields/User_Photo__c.field-meta.xml
<CustomField>
    <fullName>User_Photo__c</fullName>
    <formula>IMAGE( UserPhotoURL__c , &quot;User Photo&quot; , 50, 50)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User Photo</label>
    <type>Text</type>
</CustomField>