force-app/main/default/objects/User/fields/UserPhotoURL__c.field-meta.xml
<CustomField>
    <fullName>UserPhotoURL__c</fullName>
    <description>Used to hold the URL for User&apos;s Profile Photo</description>
    <label>UserPhotoURL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>